--- a/css/main.css
+++ b/css/main.css
@@ -26,13 +26,12 @@ nav {
 }
 
 div.nav {
-    display: inline-block;
     margin: auto 15px auto 15px;
-    padding: auto 15px auto 15px;
+    padding: 15px;
     float: right;
 }
 
-ul.navbar-menu li {
+div.nav a {
     position: relative;
     display: inline-block;
     text-decoration-line: none;
@@ -41,14 +40,13 @@ ul.navbar-menu li {
     padding: 10px;
 }
 
-ul.navbar-menu li>a {
+div.nav a {
     text-decoration-line: none;
     color: rgb(36, 35, 35);
     margin: auto;
     padding: 5px 10px;
     font-size: 1.5vw;
     /*border: 1px solid rgb(153, 152, 152);*/
-    float: right;
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
 }
@@ -71,25 +69,31 @@ a:active {
 /* Media queriy for Resposive Nav Section*/
 
 @media screen and (max-width: 900px) {
-    ul.navbar-menu li a:not(:first-child) {
+    nav {
+        background: none;
+    }
+    div.nav a {
         display: none;
     }
-    .navbar .toggle {
+    .nav .toggle {
         float: right;
-        display: block;
+        display: inline-block;
     }
-    ul.navbar-menu.responsive {
+    .nav.responsive {
         position: relative;
+        transition: all ease-in-out 2s;
     }
-    ul.navbar-menu.responsive li a.toggle {
+    .nav.responsive a.toggle {
         position: absolute;
         right: 0;
         top: 0;
+        padding: 20px 20px 0 auto !important;
     }
-    ul.navbar-menu.responsive li a {
+    .nav.responsive a {
         float: none;
         display: block;
-        text-align: left;
+        text-align: center;
+        padding: 10px 20px;
     }
 }
 
